Blender crash when I choose cycles rendering in dropdown menu on top. #32415

Closed
opened 2012-08-26 22:00:01 +02:00 by Piotrek Beśka · 10 comments

%%%I just select cycles to render, and blender immediately crash. Reproduction is 100% :/ I haven't this problem on blender 2.61.
My configuration:
Windows 7 professional x64, builder 7601 service pack 1
Processor: Intel i7 2700k
GPU: NVidia GeForce gtx 560 ti - Gainward (with newest drivers)

%%%

%%%I just select cycles to render, and blender immediately crash. Reproduction is 100% :/ I haven't this problem on blender 2.61. My configuration: Windows 7 professional x64, builder 7601 service pack 1 Processor: Intel i7 2700k GPU: NVidia GeForce gtx 560 ti - Gainward (with newest drivers) %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Which version have you tested? Please only test with official builds or testbuilds from blender.org.

Please try the following:

%%%Which version have you tested? Please only test with official builds or testbuilds from blender.org. Please try the following: * In case you used a different build, please use testbuild2 from here: http://download.blender.org/release/Blender2.64/ * Clear BF settings folder (C:\Users\Username\AppData\Roaming\Blender Foundation) and try again. %%%
Author

%%%Thx for answer, but it still don't work :/ I tested 2.64, 2.63, and 2.61 which work.%%%

%%%Thx for answer, but it still don't work :/ I tested 2.64, 2.63, and 2.61 which work.%%%
Author

%%%I check, cycles start crash for me in 2.62 (32 and 64 bit).%%%

%%%I check, cycles start crash for me in 2.62 (32 and 64 bit).%%%
Author

%%%I noticed that Blender also always crash when I choose SYSTEM in User Preferences.%%%

%%%I noticed that Blender also always crash when I choose SYSTEM in User Preferences.%%%
Author

%%%There is no problem with MinGW build.%%%

%%%There is no problem with MinGW build.%%%

%%%I couldn't redo the problem but have done some tweaks to the code now in revision 50552, hopefully it helps. Builds including this revision should be up here soon.
http://builder.blender.org/download/
%%%

%%%I couldn't redo the problem but have done some tweaks to the code now in revision 50552, hopefully it helps. Builds including this revision should be up here soon. http://builder.blender.org/download/ %%%
Author

%%%Thx :) It works for me now, win64 from visual and also mingw 64 version ;) I don't check yet 32 version.%%%

%%%Thx :) It works for me now, win64 from visual and also mingw 64 version ;) I don't check yet 32 version.%%%

%%%Thanks for checking Piotrek, closing then. :) %%%

%%%Thanks for checking Piotrek, closing then. :) %%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32415
No description provided.