Attempted fix for #32415: tighten up cycles opencl initialization checks to try to avoid crashes. Don't think these should be needed but maybe it helps.